Clean up the CSS, JS, and HTML file formats Fix an alignment issue in the CSS with the operators div

--- a/style.css
+++ b/style.css
@@ -8,8 +8,6 @@ html,body {
     margin: 0;
     border: 0;
     padding: 0;
-
-
 }
 
 #container {
@@ -20,7 +18,6 @@ html,body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-
     perspective: 500px;
 }
 
@@ -28,8 +25,9 @@ html,body {
     font-size: 3ch;
     padding: 5rem;
     color: #f9c80E;
-    text-shadow: 1px 1px 0px #FF4365;
-
+    text-shadow: 1px 1px 0 #FF4365;
+    align-items: center;
+    justify-content: center;
 }
 
 #content {
@@ -41,16 +39,11 @@ html,body {
 
 #calculator {
     width: 250px;
-
     border-width: 4px;
-    border-radius: 6px;
-
     padding: 2rem;
-
     display: flex;
     flex-direction: column;
     row-gap: 10px;
-
 }
 
 #footer {
@@ -60,14 +53,11 @@ html,body {
 
 #inputBox {
     color: #f9c80E;
-    /* border: solid #f9c80E;
-    border-width: 1px; */
-    min-height: 2.5rem;
+    min-height: 2.5r;
     font-size: 3ch;
     padding: 1rem;
-    text-shadow: 1px 1px 0px #FF4365;
+    text-shadow: 1px 1px 0 #FF4365;
     overflow-wrap: break-word;
-
 }
 
 #control-keys{
@@ -80,8 +70,7 @@ html,body {
 #numbers{
     align-self: flex-start;
     display: grid;
-    grid-template-areas: "A A A";
-    
+    grid-template-areas: "A A A"; 
 }
 
 #historyBox {
@@ -89,10 +78,6 @@ html,body {
     min-height: 2.5rem;
     font-size: 3ch;
     padding: 1rem;
-    /* border: solid #f9c80E;
-    border-width: 1px; 
-    box-shadow: 0 0 10px #f9c80E; */
-    padding: 1rem; 
     overflow-wrap: break-word;
 }
 
@@ -106,12 +91,13 @@ html,body {
     font-size: 3vw;
     display: flex;
     flex-direction: column;
-    
+    justify-content: center;
+    align-items: center;
 }
 
 .numKey{
     color: #FF4365;
-    text-shadow: 1px 1px 0px #2de2e6;
+    text-shadow: 1px 1px 0 #2de2e6;
     border: solid #FF4365;
     border-width: 1px;
     padding: 1rem; 
@@ -139,7 +125,7 @@ html,body {
 
 .operatorKey{
     color: #f9c80E;
-    text-shadow: 1px 1px 0px #FF4365;
+    text-shadow: 1px 1px 0 #FF4365;
     padding: 1rem; 
 }
 
@@ -147,7 +133,7 @@ html,body {
     background-color: #f9c80E;
     box-shadow: 0 0 20px #FF4365;
     color: #2de2e6;
-    text-shadow: 1px 1px 0px #FF4365;
+    text-shadow: 1px 1px 0 #FF4365;
 }
 
 .clicked.operatorKey{
